# aoc

./: .gitignore  README.md
2022/day13/: listparser.py
2022/day14/: day14.py
2022/day15/: day15.py
2022/day17/: day17.py  main.py
2022/day18/: main.py
2022/day19/: evo.py  getinput.py  main.py
2022/day20/: day20.py  getinput.py  main.py
2022/day21/: day21.py  main.py
2022/day23/: day23.py  getinput.py  main.py
2022/day25/: day25.py  main.py
2022/day3/: day3.py
2022/day5/: day5.py
2022/day6/: day6.py
2022/day8/: day8.py
2023/: .gitignore
2023/day1/: day1.py
2023/day10/: day10 copy.py  day10.py
2023/day11/: day11.py
2023/day12/: day12.py
2023/day13/: day13.py
2023/day14/: day14.py
2023/day15/: day15.py
2023/day16/: day16.py
2023/day17/: day17.py
2023/day18/: day18.py
2023/day19/: day19.py
2023/day2/: day2.py
2023/day20/: day20.py
2023/day21/: day21.py
2023/day22/: day22.py
2023/day23/: day23.py  main.rs
2023/day24/: day24.py
2023/day25/: day25.py
2023/day3/: day3.py
2023/day4/: day4.py
2023/day5/: day5.py
2023/day6/: day6.py
2023/day7/: day7.py
2023/day8/: day8.py
2023/day9/: day9.py
2024/day1/: day1.py
2024/day10/: day10.py
2024/day11/: day11.py
2024/day12/: day12.py
2024/day13/: day13.py
2024/day14/: day14.py
2024/day15/: day15.py
2024/day16/: day16.py
2024/day17/: day17.py
2024/day18/: day18.py
2024/day19/: day19.py
2024/day2/: day2.py
2024/day20/: day20.py
aoc_utils/: LICENSE  README.md  pyproject.toml
aoc_utils/src/aoc_utils_juanrein/: fileReading.py
(+30 files in other folders)
