[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "aoc_utils_juanrein"
version = "0.0.1"
authors = [
    { name="Juha Reinikainen"}
]
description = "utility functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operation System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/juanrein/aoc"
